margin속성을 absolute의 left로 변경처리하고 css와 js에서 %로 모션 이동 처리

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <li>1</li>
         <li>2</li>
         <li>3</li>
-        <li>4</li>
-        <li>5</li>
+        <!-- <li>4</li>
+        <li>5</li> -->
       </ul>
 
       <ul class="btns">
         <li>button1</li>
         <li>button2</li>
         <li>button3</li>
-        <li>button4</li>
-        <li>button5</li>
+        <!-- <li>button4</li>
+        <li>button5</li> -->
       </ul>
     </main>
   </body>
